fixed resume carousal overlap CSS not done yet

--- a/src/Portfolio_Container/Resume/Resume.css
+++ b/src/Portfolio_Container/Resume/Resume.css
@@ -10,6 +10,7 @@
   display: flex;
   height: 360px;
   width: 1000px;
+  /* background-color: tomato; */
 }
 .resume-bullets {
   height: 100%;
@@ -90,10 +91,10 @@
   display: flex;
   flex-direction: column;
 }
-.resume-main-heading {
+/* .resume-main-heading {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .heading-bullet {
@@ -105,6 +106,7 @@
   background-color: darkorange;
   border-radius: 50%;
 }
+
 .resume-sub-heading {
   font-size: 14px;
   font-family: "Poppins SemiBold";
@@ -153,4 +155,4 @@
   font-family: "Poppins SemiBold";
   font-size: 16px;
   color: darkorange;
-}
+}*/
